# weave

./: .dockerignore  .gitattributes  Cargo.toml  README.md  fly.toml  server.json  skills.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  test-windows.yml
crates/weave-cli/: Cargo.toml
crates/weave-cli/src/: main.rs
crates/weave-cli/src/commands/: bench.rs  bench_repo.rs  preview.rs  setup.rs
crates/weave-core/: Cargo.toml
crates/weave-core/src/: conflict.rs  lib.rs  merge.rs  reconstruct.rs
crates/weave-core/tests/: integration.rs
crates/weave-crdt/: Cargo.toml
crates/weave-crdt/src/: content.rs  error.rs  lib.rs  merge.rs  ops.rs  state.rs  sync.rs
crates/weave-crdt/tests/: crdt_v2.rs
crates/weave-driver/: Cargo.toml
crates/weave-driver/src/: main.rs
crates/weave-github/: Cargo.toml  Dockerfile
crates/weave-github/src/: comment.rs  config.rs  github.rs  main.rs  merge.rs  webhook.rs
crates/weave-mcp/: Cargo.toml
crates/weave-mcp/src/: main.rs  server.rs  tools.rs
docs/: benchmarks.html  changelog.html  docs.html  index.html  learn.html  llms.txt  merge-animation.html  style.css
site/: next.config.ts  package-lock.json  package.json
site/public/: llms.txt
site/src/app/: page.tsx
