[package]
name = "weave-cli"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "weave"
path = "src/main.rs"

[dependencies]
weave-core = { path = "../weave-core" }
weave-crdt = { path = "../weave-crdt" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", version = "0.3" }
clap = { version = "4", features = ["derive"] }
colored = "2"
diffy = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
vendored-openssl = ["openssl"]
