[package]
name = "weave-cli"
version = "0.2.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Entity-level semantic merge CLI. Resolves conflicts at the function/class level instead of lines."
repository = "https://github.com/Ataraxy-Labs/weave"
homepage = "https://github.com/Ataraxy-Labs/weave"
keywords = ["merge", "semantic", "git", "cli", "conflict-resolution"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "weave"
path = "src/main.rs"

[dependencies]
weave-core = { path = "../weave-core", version = "0.2.8" }
weave-crdt = { path = "../weave-crdt", version = "0.2.8" }
sem-core = "0.3.12"
clap = { version = "4", features = ["derive"] }
colored = "3"
diffy = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
vendored-openssl = ["openssl"]
