[package]
name = "weave-core"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Entity-level semantic merge engine. Three-way merge at the function/class/method level instead of lines."
repository = "https://github.com/Ataraxy-Labs/weave"
homepage = "https://github.com/Ataraxy-Labs/weave"
keywords = ["merge", "semantic", "git", "tree-sitter", "conflict-resolution"]
categories = ["development-tools", "algorithms"]
readme = "../../README.md"

[dependencies]
sem-core = "0.3.9"
diffy = "0.4"
thiserror = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
