[package]
name = "weave-crdt"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
test-helpers = []

[dependencies]
automerge = "0.5.12"
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", version = "0.3" }
weave-core = { path = "../weave-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
weave-crdt = { path = ".", features = ["test-helpers"] }
