[package]
name = "weave-driver"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
weave-core = { path = "../weave-core" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", version = "0.3" }
weave-crdt = { path = "../weave-crdt", optional = true }
serde_json = "1"
env_logger = "0.11"
log = "0.4"

[features]
crdt = ["weave-crdt"]
