[package]
name = "weave-driver"
version = "0.2.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Git merge driver for entity-level semantic merging. Drop-in replacement for git's default merge strategy."
repository = "https://github.com/Ataraxy-Labs/weave"
homepage = "https://github.com/Ataraxy-Labs/weave"
keywords = ["merge", "git", "merge-driver", "semantic"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[dependencies]
weave-core = { path = "../weave-core", version = "0.2.7" }
sem-core = "0.3.12"
weave-crdt = { path = "../weave-crdt", version = "0.2.7", optional = true }
serde_json = "1"
env_logger = "0.11"
log = "0.4"

[features]
crdt = ["weave-crdt"]
