[package]
name = "weave-github"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "GitHub webhook handler for entity-level semantic merges"
repository = "https://github.com/ataraxy-labs/weave"

[[bin]]
name = "weave-github"
path = "src/main.rs"

[dependencies]
weave-core = { version = "0.3.0", path = "../weave-core" }
sem-core = "0.3.20"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "10"
reqwest = { version = "0.13", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
