[package]
name = "weave-mcp"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "weave-mcp"
path = "src/main.rs"

[dependencies]
weave-core = { path = "../weave-core" }
weave-crdt = { path = "../weave-crdt" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", version = "0.3" }
lru = "0.16"
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
vendored-openssl = ["openssl"]
