[package]
name = "weave-mcp"
version = "0.2.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MCP server for entity-level semantic merge coordination. 15 tools for agents to claim, merge, and resolve conflicts."
repository = "https://github.com/Ataraxy-Labs/weave"
homepage = "https://github.com/Ataraxy-Labs/weave"
keywords = ["mcp", "merge", "semantic", "agent", "coordination"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "weave-mcp"
path = "src/main.rs"

[dependencies]
weave-core = { path = "../weave-core", version = "0.2.8" }
weave-crdt = { path = "../weave-crdt", version = "0.2.8" }
sem-core = "0.3.20"
lru = "0.16"
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
vendored-openssl = ["openssl"]
